--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,9 @@ blockquote {
   bottom: 0;
   z-index: 100;
   overflow-y: scroll;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 30px darkslategrey;
 }
 
 .invisible {
@@ -62,6 +65,7 @@ blockquote {
 }
 
 .loader {
+  box-shadow: none;
   max-height: 50vh;
   bottom: 0;
   z-index: 100;
