--- a/tryles.css
+++ b/tryles.css
@@ -48,7 +48,7 @@ blockquote {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif
 }
 
-.title, .tryAgain {
+.title, .tryAgain, .fail {
   display: block;
   font-size: 24px;
   margin: 0 0 10px;
